{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 211,
  "lineage": "2377fa61-20fe-6328-95cf-1f6bf22135c6",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "capstone_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423624556:loadbalancer/app/capstone-elb-tf/e5d770bed0880fac",
            "arn_suffix": "app/capstone-elb-tf/e5d770bed0880fac",
            "desync_mitigation_mode": "defensive",
            "dns_name": "capstone-elb-tf-89590457.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423624556:loadbalancer/app/capstone-elb-tf/e5d770bed0880fac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "capstone-elb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-050d6a55fad1039e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f711b34de75bc5d"
              },
              {
                "subnet_id": "subnet-0929d05dd1f83883c"
              }
            ],
            "subnets": [
              "subnet-08f711b34de75bc5d",
              "subnet-0929d05dd1f83883c"
            ],
            "tags": {
              "Environment": "capstone_production"
            },
            "tags_all": {
              "Environment": "capstone_production"
            },
            "vpc_id": "vpc-0eecf1e685bf23597",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.capstone_allow_http",
            "module.vpc.aws_subnet.capstone_sb_main",
            "module.vpc.aws_subnet.capstone_sb_secondary",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "capstone_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423624556:listener/app/capstone-elb-tf/e5d770bed0880fac/f8a9d8e524fad5df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423624556:targetgroup/tf-capstone-lb-tg/ad537fa48d2353bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423624556:listener/app/capstone-elb-tf/e5d770bed0880fac/f8a9d8e524fad5df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423624556:loadbalancer/app/capstone-elb-tf/e5d770bed0880fac",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.capstone_elb",
            "module.elb.aws_lb_target_group.capstone_tg",
            "module.vpc.aws_security_group.capstone_allow_http",
            "module.vpc.aws_subnet.capstone_sb_main",
            "module.vpc.aws_subnet.capstone_sb_secondary",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "capstone_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423624556:targetgroup/tf-capstone-lb-tg/ad537fa48d2353bf",
            "arn_suffix": "targetgroup/tf-capstone-lb-tg/ad537fa48d2353bf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423624556:targetgroup/tf-capstone-lb-tg/ad537fa48d2353bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-capstone-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstone_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:internet-gateway/igw-0ac508218863269b5",
            "id": "igw-0ac508218863269b5",
            "owner_id": "637423624556",
            "tags": {
              "Name": "Capstone main"
            },
            "tags_all": {
              "Name": "Capstone main"
            },
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_rtb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:route-table/rtb-0a9e356332a363e18",
            "id": "rtb-0a9e356332a363e18",
            "owner_id": "637423624556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac508218863269b5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table main"
            },
            "tags_all": {
              "Name": "Route table main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.capstone_gw",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_rtb_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:route-table/rtb-04e8f811b7f1182fa",
            "id": "rtb-04e8f811b7f1182fa",
            "owner_id": "637423624556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac508218863269b5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table secondary"
            },
            "tags_all": {
              "Name": "Route table secondary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.capstone_gw",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f6bf22601c9c04",
            "route_table_id": "rtb-0a9e356332a363e18",
            "subnet_id": "subnet-0929d05dd1f83883c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.capstone_gw",
            "module.vpc.aws_route_table.capstone_rtb_main",
            "module.vpc.aws_subnet.capstone_sb_main",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060d05db85bafe6e2",
            "route_table_id": "rtb-04e8f811b7f1182fa",
            "subnet_id": "subnet-08f711b34de75bc5d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.capstone_gw",
            "module.vpc.aws_route_table.capstone_rtb_secondary",
            "module.vpc.aws_subnet.capstone_sb_secondary",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group/sg-0c9b12f030f6d9bc6",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0c9b12f030f6d9bc6",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "637423624556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capstone_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group/sg-050d6a55fad1039e1",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-050d6a55fad1039e1",
            "ingress": [],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "637423624556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone_allow_http"
            },
            "tags_all": {
              "Name": "capstone_allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_sb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:subnet/subnet-0929d05dd1f83883c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0929d05dd1f83883c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423624556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Capstone Main"
            },
            "tags_all": {
              "Name": "Capstone Main"
            },
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_sb_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:subnet/subnet-08f711b34de75bc5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f711b34de75bc5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423624556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Capstone Secondary"
            },
            "tags_all": {
              "Name": "Capstone Secondary"
            },
            "vpc_id": "vpc-0eecf1e685bf23597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:vpc/vpc-0eecf1e685bf23597",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4aa31fd1f8dff61",
            "default_route_table_id": "rtb-0d67c38ebed428463",
            "default_security_group_id": "sg-07e5bbf4bace1e789",
            "dhcp_options_id": "dopt-0c7b149614e466d2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eecf1e685bf23597",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d67c38ebed428463",
            "owner_id": "637423624556",
            "tags": {
              "Name": "tf_capstone_vpc_main"
            },
            "tags_all": {
              "Name": "tf_capstone_vpc_main"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-08165c469c8c3832b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08165c469c8c3832b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050d6a55fad1039e1",
            "security_group_rule_id": "sgr-08165c469c8c3832b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.capstone_allow_http",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-03c9facc4aae3d65c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-03c9facc4aae3d65c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050d6a55fad1039e1",
            "security_group_rule_id": "sgr-03c9facc4aae3d65c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.capstone_allow_http",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-01a35e1f71ba0b090",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01a35e1f71ba0b090",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c9b12f030f6d9bc6",
            "security_group_rule_id": "sgr-01a35e1f71ba0b090",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "capstone_allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-01a493a8a31afeab8",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01a493a8a31afeab8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050d6a55fad1039e1",
            "security_group_rule_id": "sgr-01a493a8a31afeab8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.capstone_allow_http",
            "module.vpc.aws_vpc.capstone_vpc_main"
          ]
        }
      ]
    }
  ]
}